bundles/roboconf-core/src/test/resources/configurations/invalid/facet-invalid-end.graph
facet server {
	installer: bash;
} facet toto {

}